--- a/game.css
+++ b/game.css
@@ -25,9 +25,9 @@ body {
 	}
 	
 .checkerShapeX {
-    width : 17px;
-    height : 17px;
-    border-radius: 50px;
+    width : 100%;
+    height : 100%;
+    border-radius: 100%;
     position: relative;
     //background: blue;
     background: -webkit-radial-gradient(blue, #0000ef, black); /* Safari 5.1 to 6.0 */
@@ -43,9 +43,9 @@ body {
     margin-bottom:auto;
 }
 .checkerShapeO {
-    width : 17px;
-    height : 17px;
-    border-radius: 50px;
+    width : 100%;
+    height : 100%;
+    border-radius: 100%;
     position: relative;
     background: -webkit-radial-gradient(red, #df0000, black); /* Safari 5.1 to 6.0 */
     background: -o-radial-gradient(red, #df0000, black); /* For Opera 11.6 to 12.0 */
